phase2_Dev/src/objects/Conditions_and_Limitations__c.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Condition_Additional_Information__c</fullName>
        <inlineHelpText>To be filled if the standard condition selected needs some additional information (ex: Other). The content of this field will replace #Add_Info# tag in the standard condition</inlineHelpText>
        <label>Condition Additional Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Condition_Name_Text_Hidden_field__c</fullName>
        <description>Name of Condition in Text</description>
        <formula>Condition_Name__r.Name</formula>
        <label>Condition Name (Text Hidden field)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Condition_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Condition Name</label>
        <referenceTo>Condition__c</referenceTo>
        <relationshipLabel>Conditions and Limitations</relationshipLabel>
        <relationshipName>Conditions_and_Limitations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Condition_On_License__c</fullName>
        <formula>IF ( FIND(&quot;#Effective_Date#&quot;,  Condition_Name__r.Full_Description__c ) &lt;&gt; 0,  

SUBSTITUTE(IF (FIND(&quot;#Add_Info#&quot;, Condition_Name__r.Full_Description__c ) &lt;&gt; 0, SUBSTITUTE(Condition_Name__r.Full_Description__c, &quot;#Add_Info#&quot;,  Condition_Additional_Information__c ), Condition_Name__r.Full_Description__c), &quot;#Effective_Date#&quot;,  TEXT(MONTH( Start_Date__c ))+&quot;/&quot; +TEXT(DAY( Start_Date__c ))+&quot;/&quot; +TEXT(YEAR( Start_Date__c ))),  

IF (FIND(&quot;#Add_Info#&quot;, Condition_Name__r.Full_Description__c ) &lt;&gt; 0, SUBSTITUTE(Condition_Name__r.Full_Description__c, &quot;#Add_Info#&quot;,  Condition_Additional_Information__c ), Condition_Name__r.Full_Description__c))</formula>
        <inlineHelpText>Condition as it will be displayed on the license</inlineHelpText>
        <label>Condition Full Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conditions__c</fullName>
        <label>Conditions</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Current__c</fullName>
        <formula>AND( Start_Date__c &lt;=  TODAY(),
OR(
ISBLANK(Expiration_Date__c), 
 Expiration_Date__c  &gt;= TODAY())
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Provider__c</fullName>
        <label>Provider</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Conditions and Limitations</relationshipLabel>
        <relationshipName>Conditions_and_Limitations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Source_Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Transaction</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Transaction selected must be associated to the provider this condition applies.</errorMessage>
            <filterItems>
                <field>Licensing_Transaction__c.Provider__c</field>
                <operation>equals</operation>
                <valueField>$Source.Provider__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Licensing_Transaction__c</referenceTo>
        <relationshipLabel>Conditions and Limitations</relationshipLabel>
        <relationshipName>Conditions_and_Limitations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Conditions and Limitations</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CL-{000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conditions and Limitations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Expiration_Date_Greater_than_Start_Date</fullName>
        <active>true</active>
        <description>Expiration Date must be &gt; Start Date</description>
        <errorConditionFormula>Expiration_Date__c  &lt;=  Start_Date__c</errorConditionFormula>
        <errorDisplayField>Expiration_Date__c</errorDisplayField>
        <errorMessage>Expiration Date must be greater than the Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>If_Standard_Cond_needs_Add_Info_then_Req</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK( Condition_Additional_Information__c ),FIND(&quot;#Add_Info#&quot;,Condition_Name__r.Full_Description__c) &lt;&gt; 0)</errorConditionFormula>
        <errorDisplayField>Condition_Additional_Information__c</errorDisplayField>
        <errorMessage>The selected condition requires some additional information. Please fill this field with correct information</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Standard_Condition_Apply_To_Prov_Type</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT(Condition_Name__r.Apply_To__c)&lt;&gt; Provider__r.RecordType.Name</errorConditionFormula>
        <errorDisplayField>Condition_Name__c</errorDisplayField>
        <errorMessage>The standard condition selected does not apply to this record type, please select another one.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_date_not_empty_if_transactn_closed</fullName>
        <active>true</active>
        <description>Start Date&quot; should not be empty if associated transaction status = &quot;Closed (License Issued / Updated)&quot;</description>
        <errorConditionFormula>ISPICKVAL(Source_Transaction__r.Status__c, &quot;Closed (License Issued / Updated)&quot;) &amp;&amp; ISBLANK(Start_Date__c)</errorConditionFormula>
        <errorDisplayField>Start_Date__c</errorDisplayField>
        <errorMessage>Please enter a value for Start Date. Start Date&quot; should not be empty if associated transaction status = &quot;Closed (License Issued / Updated)&quot;.</errorMessage>
    </validationRules>
</CustomObject>